plugins {
    java

    id("org.springframework.boot") version "3.5.0"

    id("io.spring.dependency-management") version "1.1.7"
}

group = "com.kartibrown"
version = "1.0"

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation(
        "org.springframework.boot:spring-boot-starter-web"
    )

    implementation(
        "org.springframework.boot:spring-boot-starter-websocket"
    )
}
